scenarios/03-multi-listener/http-listener-isolation/32-route-wildcard-example.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-wildcard-example
  namespace: backend-a
  labels:
    app.kubernetes.io/part-of: demo
spec:
  parentRefs:
    - name: http-listener-isolation-gateway
      namespace: gateway-system
      sectionName: wildcard-example
  rules:
    - filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: X-Listener
                value: wildcard-example
      backendRefs:
        - name: api
          port: 80
