scenarios/03-multi-listener/http-listener-isolation/34-route-exact-abc-foo.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-exact-abc-foo
  namespace: backend-b
  labels:
    app.kubernetes.io/part-of: demo
spec:
  parentRefs:
    - name: http-listener-isolation-gateway
      namespace: gateway-system
      sectionName: exact-abc-foo
  rules:
    - filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: X-Listener
                value: exact-abc-foo
      backendRefs:
        - name: api
          port: 80
